--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@types/react": "^18.3.14",
     "@types/react-dom": "^18.3.3",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
