--- a/.github/workflows/docker-ghcr.yml
+++ b/.github/workflows/docker-ghcr.yml
@@ -19,10 +19,10 @@ jobs:
 
       - name: Build Docker image
         run: |
-          IMAGE_NAME=ghcr.io/quack-kr/quack-Web
+          IMAGE_NAME=ghcr.io/quack-kr/quack-web
           docker build -t $IMAGE_NAME:latest .
 
       - name: Push Docker image to GHCR
         run: |
-          IMAGE_NAME=ghcr.io/quack-kr/quack-Web
+          IMAGE_NAME=ghcr.io/quack-kr/quack-web
           docker push $IMAGE_NAME:latest
