--- a/package.json
+++ b/package.json
@@ -3,19 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.7.9",
-    "date-fns": "^4.1.0",
-    "react": "^18.3.1",
-    "react-datepicker": "^8.0.0",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0",
-    "react-router-dom": "^7.0.2",
-    "react-scripts": "^5.0.1",
-    "styled-components": "^6.1.13",
-    "zustand": "^5.0.3"
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -23,8 +10,16 @@
     "@types/node": "^16.18.121",
     "@types/react": "^18.3.14",
     "@types/react-dom": "^18.3.3",
+    "axios": "^1.7.9",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.0.2",
+    "react-scripts": "^5.0.1",
+    "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
