--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,9 +1,9 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name quack.io.kr;
 
     location / {
-        root /usr/share/nginx/html;
+        root /etc/nginx/html/;
         index index.html;
         try_files $uri /index.html;
     }
@@ -17,5 +17,7 @@ server {
         expires 6M;
         access_log off;
         add_header Cache-Control "public";
+        add_header ETag $upstream_http_etag;
+        add_header Last-Modified $date_gmt;
     }
 }
