--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-datepicker": "^8.2.1",
