--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sentry/browser": "^9.10.1",
+    "@sentry/react": "^9.10.1",
+    "@sentry/tracing": "^7.100.1",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "react": "^18.3.1",
