--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "@types/node": "^18.19.84",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.5",
-    "typescript": "^5.8.2"
+    "@vitejs/plugin-react": "^4.3.4",
+    "typescript": "^5.8.2",
+    "vite": "^6.2.5"
   }
 }
