--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@sentry/browser": "^9.10.1",
     "@sentry/react": "^9.10.1",
     "@sentry/tracing": "^7.100.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "react": "^18.3.1",
@@ -14,6 +15,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "styled-components": "^6.1.13",
+    "vite": "^6.2.5",
     "zustand": "^5.0.3"
   },
   "scripts": {
@@ -48,8 +50,6 @@
     "@types/node": "^18.19.84",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
-    "typescript": "^5.8.2",
-    "vite": "^6.2.4"
+    "typescript": "^5.8.2"
   }
 }
