--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -8,6 +8,17 @@ server {
         try_files $uri /index.html;
     }
 
+    location /assets/ {
+        proxy_pass https://s3.ap-northeast-2.amazonaws.com/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        expires 4h;
+        add_header Cache-Control "public, max-age=14400";
+    }
+
     location /static/ {
         expires 1y;
         add_header Cache-Control "public, max-age=31536000, immutable";
